JS Avatar. Se pasan a variables globales las variables correspondientes

--- a/Practicas/Avatar 27-8-25/index.html
+++ b/Practicas/Avatar 27-8-25/index.html
@@ -31,13 +31,13 @@
         <div class="character-contianer">
             <img id="player" src="">
             <span id="player-floating-text" class="floating-text">-1 Vida</span>
-            <p>Tu personaje tiene <span id="player-lp" style="color: red;">3</span> vidas</p>
+            <p>Tu personaje tiene <span id="player-hp" style="color: red;">3</span> vidas</p>
         </div>
 
         <div class="character-contianer">
             <img id="enemy" src="">
             <span id="enemy-floating-text" class="floating-text">-1 Vida</span>
-            <p>El enemigo tiene <span id="enemy-lp" style="color: red;">3</span> vidas</p>
+            <p>El enemigo tiene <span id="enemy-hp" style="color: red;">3</span> vidas</p>
         </div>
 
         <h2 id="attack-title">Elige tu ataque</h2>
