JS Avatar. Se agregan detalles visuales y se organiza mejor el codigo

--- a/Practicas/Avatar 27-8-25/index.html
+++ b/Practicas/Avatar 27-8-25/index.html
@@ -17,10 +17,10 @@
 
     <div id="char-selector" class="section">
         <h2>Elige tu Personaje</h2>
-        <label><input type="radio" name="character" value="Zuko"> Zuko</label>
-        <label><input type="radio" name="character" value="Katara"> Katara</label>
-        <label><input type="radio" name="character" value="Aang"> Aang</label>
-        <label><input type="radio" name="character" value="Toph"> Toph</label>
+        <label><input type="radio" name="character" value="Zuko"> Zuko 🔥 </label>
+        <label><input type="radio" name="character" value="Katara"> Katara 💧 </label>
+        <label><input type="radio" name="character" value="Aang"> Aang ☁️ </label>
+        <label><input type="radio" name="character" value="Toph"> Toph ⛰️ </label>
         <br><br>
         <button onclick="selectCharacter()">Seleccionar</button>
     </div>
@@ -59,9 +59,9 @@
             El sistema de combate se basa en una mecánica similar a <em>Piedra, Papel o Tijera</em>, utilizando los siguientes ataques:
         </p>
         <ul>
-            <li><strong>Punio ✊</strong> le gana a <strong>Barrida 🦶</strong></li>
+            <li><strong>Puño ✊</strong> le gana a <strong>Barrida 🦶</strong></li>
             <li><strong>Barrida 🦶</strong> le gana a <strong>Patada 🦵</strong></li>
-            <li><strong>Patada 🦵</strong> le gana a <strong>Punio ✊</strong></li>
+            <li><strong>Patada 🦵</strong> le gana a <strong>Puño ✊</strong></li>
         </ul>
         <p>
             Elegí sabiamente tus ataques para derrotar al enemigo antes de quedarte sin vidas. ¡Buena suerte!
